wiki resources - batch opti

--- a/ColumnDesign/UCBatchDesign.xaml
+++ b/ColumnDesign/UCBatchDesign.xaml
@@ -535,6 +535,9 @@
                                             <DataTrigger Binding="{Binding Status}" Value="DesignFound">
                                                 <Setter Property="Visibility" Value="Visible"/>
                                             </DataTrigger>
+                                            <DataTrigger Binding="{Binding Status}" Value="NoDesignFound">
+                                                <Setter Property="Visibility" Value="Collapsed"/>
+                                            </DataTrigger>
                                         </Style.Triggers>
                                     </Style>
                                 </StackPanel.Style>
@@ -604,6 +607,9 @@
                                                     <DataTrigger Binding="{Binding Col.IsRectangular}" Value="False">
                                                         <Setter Property="Visibility" Value="Collapsed"/>
                                                     </DataTrigger>
+                                                    <DataTrigger Binding="{Binding Status}" Value="NoDesignFound">
+                                                        <Setter Property="Visibility" Value="Collapsed"/>
+                                                    </DataTrigger>
                                                 </Style.Triggers>
                                             </Style>
                                         </StackPanel.Style>
@@ -658,6 +664,9 @@
                                     <StackPanel.Style>
                                         <Style TargetType="StackPanel">
                                             <Style.Triggers>
+                                                <DataTrigger Binding="{Binding Status}" Value="NotDesigned">
+                                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                                </DataTrigger>
                                                 <DataTrigger Binding="{Binding Status}" Value="InProgress">
                                                     <Setter Property="Visibility" Value="Visible"/>
                                                 </DataTrigger>
@@ -665,6 +674,9 @@
                                                     <Setter Property="Visibility" Value="Collapsed"/>
                                                 </DataTrigger>
                                                 <DataTrigger Binding="{Binding Status}" Value="Designed">
+                                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                                </DataTrigger>
+                                                <DataTrigger Binding="{Binding Status}" Value="NoDesignFound">
                                                     <Setter Property="Visibility" Value="Collapsed"/>
                                                 </DataTrigger>
                                             </Style.Triggers>
@@ -677,6 +689,9 @@
                                     <StackPanel.Style>
                                         <Style TargetType="StackPanel">
                                             <Style.Triggers>
+                                                <DataTrigger Binding="{Binding Status}" Value="NotDesigned">
+                                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                                </DataTrigger>
                                                 <DataTrigger Binding="{Binding Status}" Value="InProgress">
                                                     <Setter Property="Visibility" Value="Collapsed"/>
                                                 </DataTrigger>
